<resources>
    <string name="app_name">TradeGenie</string>
    <string name="mobile_no">Mobile No</string>
    <string name="we_have_sent_otp_on_your_number">Please enter an OTP sent to </string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="drawer_close">close</string>
    <string name="drawer_open">open</string>
    <string name="personal_details">Personal Details</string>
    <string name="p_name">Name</string>
    <string name="p_email">Email</string>
    <string name="p_gender">Gender</string>
    <string name="p_dob">Date Of Birth</string>
    <string name="p_country">Country</string>
    <string name="p_city">City</string>
    <string name="p_address">Address</string>
    <string name="p_submit">Submit</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="home">Home</string>
    <string name="favourite">Favorites</string>
    <string name="my_products">My Products</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="company_name">Company Name</string>
    <string name="year_of_establishment">Year of Establishment</string>
    <string name="no_of_employee">No. of Employee</string>
    <string name="city">City</string>
    <string name="document">Document</string>
    <string name="certification">Certification</string>
    <string name="add_new">Add New</string>
    <string name="total_products">Total Products</string>
    <string name="my_lead">My Lead</string>
    <string name="lead_manager">Lead Manager</string>
    <string name="category">Category</string>
    <string name="sub_sub_category">Sub Sub Category</string>
    <string name="product_name">Product Name</string>
    <string name="mode_of_payment">Mode Of Payment</string>
    <string name="mode_of_supply">Mode Of Supply</string>
    <string name="delivery_time">Delivery time</string>
    <string name="production_capacity">Production capacity</string>
    <string name="port_of_supply">Port of supply</string>
    <string name="minimum_order_quantity">Minimum order quantity</string>
    <string name="sample_piece">Sample piece</string>
    <string name="short_description">Short Description</string>
    <string name="specification">Specification</string>
    <string name="additional_features">Additional Features</string>
    <string name="description">Description</string>
    <string name="OK">OK</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="Image">Image</string>
    <string name="pdf_doc">Pdf/Doc</string>
    <string name="check_internet_problem">Sorry, Please check your internet connection.</string>
    <string name="auth_fail">Sorry, AuthFailureError.</string>
    <string name="server_error">Sorry, ServerError.</string>
    <string name="network_error">Sorry, NetworkError.</string>
    <string name="email">Email</string>
    <string name="pincode">Pincode</string>
    <string name="video_link">Video Link</string>
    <string name="used_type">Used Type</string>
    <string name="product_price">Product Price</string>
    <string name="enter_email">Enter email</string>
    <string name="company_address">Company Address</string>
    <string name="update">update</string>
    <string name="product_specification">Product Specification</string>
    <string name="product_description">Product Description</string>
    <string name="features">Features</string>
    <string name="more_related_product">More related product</string>
    <string name="capacity">Capacity</string>
    <string name="brand">Brand</string>
    <string name="voltage">Voltage</string>
    <string name="frequency">Frequency</string>
    <string name="surface_finishing">Surface Finishing</string>
    <string name="qty">Qty</string>
    <string name="unit">Unit</string>
    <string name="price_range">Price range</string>
    <string name="preferred">Preferred</string>
    <string name="type_of_buyer">Type of buyer</string>
    <string name="free">FREE</string>
    <string name="view_details"><u>View Details</u> </string>
    <string name="currency">Currency</string>
    <string name="buyer_details_will_show_after_buy_lead">Buy a lead to open up buyer\'s contact details.</string>
    <string name="contact_details_will_show_after_buy_tender">Contact details will be displayed after buy tender</string>
    <string name="you_want_trusted_sellers_for_your_products">Search your Single/Multiple requirement.</string>
    <string name="post_new_requirement">Post New Requirement</string>
    <string name="payment_transaction_detail">Payment Transaction Details</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of TradeGenie App is available. Please update app to latest version</string>
    <string name="youAreNotUpdatedMessage1"></string>
    <string name="tender_name">Tender Name</string>
    <string name="tender_description">Tender description</string>
    <string name="tender_link">Tender link</string>
    <string name="documents">Documents</string>
    <string name="add">Add</string>
    <string name="add_more">Add more</string>
    <string name="cost">Cost</string>
    <string name="valid_tender_name">Please enter tender name.</string>
    <string name="valid_description">Please enter description.</string>
    <string name="valid_tender_link">Please enter link.</string>
    <string name="invalid_tender_link">Please enter valid link.</string>
    <string name="valid_cost">Please enter cost</string>
    <string name="select_doc">Please select document.</string>
    <string name="select_currency">Please select currency.</string>
    <string name="payment_done">Tender has been purchased successfully.</string>
    <string name="logout">Logout</string>
    <string name="languages">Select Language</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="related_products">Related Products</string>
    <string name="lbl_cash">Cash</string>
    <string name="lbl_online">Online</string>
    <string name="all_products">All products</string>
    <string name="lbl_please_upload_brochure_of_size_up_to_3mb">Please upload brochure of size up to 3MB.</string>
    <string name="lbl_subscription">Subscription</string>
    <string name="lbl_my_enquiry">My Enquiry</string>
    <string name="lbl_become_a_seller">BECOME A SELLER</string>
    <string name="lbl_verify">VERIFY</string>
    <string name="lbl_resend_otp">Resend OTP?</string>
    <string name="lbl_note">NOTE:-</string>
    <string name="lbl_otp_is_valid_upto_10_minutes">An OTP is valid upto 10 minutes</string>
    <string name="lbl_sign_in_sign_up">SIGN IN/SIGN UP</string>
    <string name="lbl_buyer">Buyer</string>
    <string name="lbl_seller">Seller</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_waiting_for_response">Waiting for response</string>
    <string name="lbl_upgrade">Upgrade</string>
    <string name="lbl_buy_now">Buy Now</string>
    <string name="lbl_buy_lead">Buy Lead</string>
    <string name="lbl_subject">Subject</string>
    <string name="lbl_quantity">Quantity</string>
    <string name="lbl_price_range">Price Range</string>
    <string name="lbl_enquiry">Enquiry</string>
    <string name="lbl_view">View</string>
    <string name="lbl_category_sub_category">Category / Sub Category</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_remark">Remark :-</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="lbl_transaction_id">Transaction ID</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="lbl_lead_amount">Lead Amount</string>
    <string name="lbl_tender_id">Tender ID:</string>
    <string name="lbl_cost">Cost:</string>
    <string name="lbl_tender_name">Tender name:</string>
    <string name="lbl_verified_seller">Verified Seller</string>
    <string name="lbl_subscription_amount">Subscription Amount</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_payment_type">Payment type:</string>
    <string name="lbl_pay_now">Pay Now</string>
    <string name="thank_you_for_sending_your_requirement">Thank you for sending your requirement.</string>
    <string name="you_will_be_contacted_soon">You will be contacted soon</string>
    <string name="lbl_chat_now">Chat Now</string>
    <string name="lbl_product_filter">Product Filter</string>
    <string name="lbl_sub_category">Sub-Category</string>
    <string name="lbl_sub_sub_category">Sub-Sub-Category</string>
    <string name="lbl_budget_range">Budget Range</string>
    <string name="lbl_rating">Rating</string>
    <string name="high_to_low">High to Low</string>
    <string name="lbl_filter_now">Filter Now</string>
    <string name="lbl_start_date">Start Date</string>
    <string name="lbl_end_date">End Date</string>
    <string name="lbl_number_of_leads">Number Of Leads :-</string>
    <string name="lbl_number_of_images">"Number of Images - "</string>
    <string name="lbl_services">Services</string>
    <string name="oops_time_out_please_resend_otp">Oops! Time Out! Please resend OTP</string>
    <string name="rate_this_seller">Rate this seller</string>
    <string name="lbl_days">Days</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="upload_brochure">Upload Brochure</string>
    <string name="youtube_video_link">Youtube Video Link</string>
    <string name="packing_details">Packing details</string>
    <string name="keywords">Keywords</string>
    <string name="select_checkbox_to_update_product_details">Select checkbox to update product details</string>
    <string name="product_will_be_submitted_for_approval_and_status_can_be_seen_in_pending_list">Please Note: The product will be submitted for Approval and status can be seen in Pending list.</string>
    <string name="legal_status_of_firm">Legal Status Of Firm</string>
    <string name="nature_of_business">Nature Of Business</string>
    <string name="annual_turnover">Annual Turnover</string>
    <string name="business_mobile_number">Business Mobile Number</string>
    <string name="whatsapp_number">WhatsApp Number</string>
    <string name="viber_number">Viber Number</string>
    <string name="gst_no">GST No.</string>
    <string name="tax_no">Tax No.</string>
    <string name="iec">IEC</string>
    <string name="cin">CIN</string>
    <string name="tan">TAN</string>
    <string name="pin_code">PIN Code</string>
    <string name="website">Website</string>
    <string name="about_company">About Company</string>
    <string name="agent_code">Agent Code</string>
    <string name="no_favorites_item_available">No Favorites item available</string>
    <string name="national_identification_no">National Identification No.</string>
    <string name="no_item_available">No Item Available</string>
    <string name="no_chats">No Chats</string>
    <string name="lead_for_your_business">Lead For your Business</string>
    <string name="chat_list">Chat list</string>
    <string name="ratings">Ratings</string>
    <string name="send_enquiry">send enquiry</string>
    <string name="enquiry_date">Enquiry Date</string>
    <string name="required_quantity">Required Quantity</string>
    <string name="seller_details">Seller Details</string>
    <string name="call_now">Call Now</string>
    <string name="message_now">Message Now</string>
    <string name="no_enquiry_available">No Enquiry Available</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="buyer_details">Buyer Details</string>
    <string name="lbl_paid">Paid</string>
    <string name="no_post_requirement_available">No Post Requirement Available</string>
</resources>