<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/you_want_trusted_sellers_for_your_products"
            android:textSize="@dimen/fontsize_14"/>

        <LinearLayout
            android:id="@+id/linear_layout_new_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/bg_button_with_corner_and_green_bg"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_new_requirement"
                android:textColor="@color/colorWhite"
                android:paddingTop="@dimen/margin_5"
                android:paddingBottom="@dimen/margin_5"
                android:paddingStart="@dimen/margin_10"
                android:paddingEnd="@dimen/margin_10"
                android:textSize="@dimen/fontsize_14"
                android:duplicateParentState="true"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_post_req"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewErrorMessage"
                android:text="@string/no_post_requirement_available"
                android:gravity="center"
                android:textSize="20sp"
                android:visibility="gone"
                android:layout_centerInParent="true" />

        </RelativeLayout>



    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ProgressBarPostEnqList"
        android:background="@android:color/transparent"
        android:visibility="gone">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="@dimen/margin_80"
            android:layout_height="@dimen/margin_80"
            android:src="@drawable/loader"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>



</RelativeLayout>
