<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/bg_shadow_with_white_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_20">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/iv_cancel"
                android:textColor="@color/colorText"
                android:textSize="@dimen/fontsize_16"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_cancel"
                android:layout_width="@dimen/margin_25"
                android:layout_height="@dimen/margin_25"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"

                android:src="@drawable/ic_cancel_black_24dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="right"
                    android:text="@string/lbl_subscription_amount"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/fontsize_16" />

                <TextView
                    android:id="@+id/tv_subscription_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="right"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/fontsize_16" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutTaxRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/colorTextHint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="right"
                    android:text="@string/lbl_total"
                    android:textColor="@color/colorOTPText"
                    android:textSize="@dimen/fontsize_16" />

                <TextView
                    android:id="@+id/tv_grand_total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="right"
                    android:textColor="@color/colorGreen"
                    android:textSize="@dimen/fontsize_16" />

            </LinearLayout>


        </LinearLayout>


<!--        <LinearLayout-->
<!--            android:id="@+id/linear_layout_pay_now"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/margin_15"-->
<!--            android:layout_marginBottom="@dimen/margin_15"-->
<!--            android:background="@drawable/bg_button_with_corner_and_green_bg">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:paddingStart="@dimen/margin_30"-->
<!--                android:paddingTop="@dimen/margin_5"-->
<!--                android:paddingEnd="@dimen/margin_30"-->
<!--                android:paddingBottom="@dimen/margin_5"-->
<!--                android:text="Pay Now"-->
<!--                android:textColor="@color/colorWhite" />-->

<!--        </LinearLayout>-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_payment_type"
            android:layout_marginTop="@dimen/margin_20"
            android:textColor="@color/colorText"
            android:textSize="@dimen/fontsize_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:orientation="horizontal"
                    android:layout_toStartOf="@+id/linear_layout_pay_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_cash"
                        android:text="@string/lbl_cash"
                        android:textSize="12sp"
                        android:textColor="@color/colorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/radio_online"
                        android:text="@string/lbl_online"
                        android:textSize="12sp"
                        android:textColor="@color/colorText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/linear_layout_pay_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:background="@drawable/bg_button_with_corner_and_green_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/margin_30"
                        android:paddingTop="@dimen/margin_5"
                        android:paddingEnd="@dimen/margin_30"
                        android:paddingBottom="@dimen/margin_5"
                        android:text="@string/lbl_pay_now"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>

            </RelativeLayout>

            <!--                <LinearLayout-->
            <!--                    -->
            <!--                    android:layout_marginBottom="@dimen/margin_15"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content">-->
            <!--                    <TextView-->
            <!--                        android:text="Payment type: "-->
            <!--                        android:textSize="12sp"-->
            <!--                        android:textColor="@color/colorText"-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="wrap_content"/>-->

            <!--                    <TextView-->
            <!--                        android:id="@+id/lbl_payment_type"-->
            <!--                        android:textSize="12sp"-->
            <!--                        android:textColor="@color/colorText"-->
            <!--                        android:layout_width="wrap_content"-->
            <!--                        android:layout_height="wrap_content"/>-->
            <!--                </LinearLayout>-->
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
